--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 	<link rel="icon" href="images/search.png">
 </head>
 <body>
+	<!-- judulContainer -->
 	<div id="judulContainer">
 		<img src="images/search.gif" id="iconGif" alt="searchGif">
 		<h1>CekGolongan</h1>
 		<h2>by <a href="https://instagram.com/ar1599z/">@AR1599</a></h2>
 	</div>
+	<!-- judulContainer END -->
+
+	<!-- kontenContainer -->
 	<div id="kontenContainer">
 		<div id="formContainer">
-			<h3>Masukkan Nama dan Usiamu Dibawah ini!</h3>
+			<h3>Masukkan Nama dan Usiamu Dibawah ini</h3>
 			<form id="cekForm">
 				<div class="inputContainer">
 					<input type="text" name="nama" id="namaInput" autocomplete="off" placeholder=" " required>
@@ -27,11 +31,18 @@
 				</div>
 				<button type="submit">Cek</button>
 			</form>
+			<div id="hasil"></div>
 		</div>
 	</div>
+	<!-- kontenContainer END -->
+
+	<!-- helpContainer -->
 	<div id="helpContainer">
-		<p><a href="https://www.instagram.com/direct/t/17843030439100058/">DM Saya</a> Jika Ada Tambahan Ide, Kesalahan, Bug, Sosok Hytam(woilah rek), Rusdi Ngawi, User Alu dan sebagainya</p>
+		<p><a href="https://www.instagram.com/direct/t/17843030439100058/" target="blank">DM Saya</a> Jika Ada Tambahan Ide, Kesalahan, Bug, Sosok Hytam, Rusdi Ngawi, User Alu dan sebagainya</p>
 	</div>
+	<!-- helpContainer END -->
+
+	<!-- creditContainer -->
 	<div id="creditContainer">
 		<p>Made with <img src="images/heart.png" alt="heart"> By</p>
 		<div id="social">
@@ -39,6 +50,7 @@
 			<a href="https://instagram.com/ar1599z/"><img src="images/instagram.png" alt="instagram">@ar1599z</a>
 		</div>
 	</div>
+	<!-- creditContainer END -->
 	<p>Demo Version ;)</p>
 
 	<script type="text/javascript" src="script.js"></script>
